<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBody"
    tools:context=".base.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/relative_layout_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp">

        <TextView
            android:id="@+id/text_view_main_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:fontFamily="@font/montserrat_medium" />

        <TextView
            android:id="@+id/text_view_main_sdk_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/text_view_main_app_name"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:fontFamily="@font/montserrat_medium"
            tools:text="SDK v1.0.0" />

        <ImageView
            android:id="@+id/image_view_main_dio_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view_placements_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/frame_layout_add_placement_button"
        android:layout_below="@+id/relative_layout_main_toolbar"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_placements_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_predefined_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/predefined_placements_header_text"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:fontFamily="@font/montserrat_regular" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_main_placements_predefined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:clipToPadding="false" />

            <TextView
                android:id="@+id/text_view_user_defined_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="48dp"
                android:background="@color/colorAccent"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/my_placements_header_text"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:fontFamily="@font/montserrat_regular" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_main_placements_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/frame_layout_add_placement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/text_view_add_placement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/add_new_placement"
            android:textColor="@color/colorBody"
            android:textSize="14sp"
            app:fontFamily="@font/montserrat_regular" />
    </FrameLayout>
</RelativeLayout>