<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBody"
    tools:context=".base.activities.AddPlacementActivity">

    <RelativeLayout
        android:id="@+id/relative_layout_add_placement_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/image_view_add_placement_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_chevron_left" />

        <TextView
            android:id="@+id/text_view_add_placement_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:fontFamily="@font/montserrat_medium" />

        <TextView
            android:id="@+id/text_view_add_placement_sdk_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/text_view_add_placement_app_name"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:fontFamily="@font/montserrat_medium"
            tools:text="SDK v1.0.0" />

        <ImageView
            android:id="@+id/image_view_add_placement_dio_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_add_placement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_add_placement_toolbar"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:text="@string/add_a_new_placement"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:fontFamily="@font/montserrat_regular" />

    <LinearLayout
        android:id="@+id/linear_layout_app_id_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_add_placement_title"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/text_view_main_app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/app_id"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:fontFamily="@font/montserrat_medium" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bg_rounded_frame">

            <EditText
                android:id="@+id/edit_text_app_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/app_id"
                android:inputType="number"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                app:fontFamily="@font/montserrat_medium" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_layout_get_placement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/linear_layout_app_id_container"
        android:layout_margin="16dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/text_view_get_placement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/get_placements"
            android:textColor="@color/colorBody"
            android:textSize="14sp"
            app:fontFamily="@font/montserrat_regular" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_add_placements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_layout_get_placement" />

    <ProgressBar
        android:id="@+id/progress_bar_add_placements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_app_id_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:visibility="gone" />

</RelativeLayout>