<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBody"
    tools:context=".activities.ShowPlacementActivity">

    <RelativeLayout
        android:id="@+id/relative_layout_show_placement_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/image_view_show_placement_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_chevron_left_black" />

        <TextView
            android:id="@+id/text_view_show_placement_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:fontFamily="@font/montserrat_medium" />

        <TextView
            android:id="@+id/text_view_show_placement_sdk_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/text_view_show_placement_app_name"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:fontFamily="@font/montserrat_medium"
            tools:text="SDK v1.0.0" />

        <ImageView
            android:id="@+id/image_view_show_placement_dio_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_show_placement_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_show_placement_toolbar"
        android:layout_margin="8dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/text_view_show_placement_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/text_view_show_placement_type"
            android:layout_toStartOf="@id/text_view_show_placement_type"
            android:padding="8dp"
            android:text="display.io Interstitial"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:fontFamily="@font/montserrat_regular" />

        <TextView
            android:id="@+id/text_view_show_placement_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:text="[Interstitial]"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:fontFamily="@font/montserrat_thin" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_show_placement_details"
        android:orientation="horizontal"
        android:weightSum="2">

        <FrameLayout
            android:id="@+id/frame_layout_load_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:gravity="center">

            <TextView
                android:id="@+id/text_view_load_ad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/load_ad"
                android:textColor="@color/colorBody"
                android:textSize="14sp"
                app:fontFamily="@font/montserrat_regular" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout_show_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@color/colorDarkGrey"
            android:gravity="center">

            <TextView
                android:id="@+id/text_view_show_ad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/show_ad"
                android:textColor="@color/colorBody"
                android:textSize="14sp"
                app:fontFamily="@font/montserrat_regular" />

        </FrameLayout>
    </LinearLayout>

</RelativeLayout>